Fixed table header, form background and sidebar contrast

--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -18,8 +18,8 @@
 // Overwrite some basic colors.
 $white: #273346;
 $gray-050: #fafafa;
-$gray-100: #fafafa;
-$gray-200: #273346;
+$gray-100: #354155;
+$gray-200: #354155;
 $gray-300: #e6eaf1;
 $gray-400: #d5dae5;
 $gray-500: #bfc5d3;
@@ -45,17 +45,20 @@ $gray-darker: $gray-900;
 $yellow-light: #fffd80;
 
 // Overwrite some theme colors.
-$primary: #e78cae;
+$primary: #bdcdff;
 $secondary: $gray;
 $light: $gray-100;
 $dark: $gray;
+
+// Overwrite the components style
+$tag-bg: #7792e3;
 
 $primary-a50: change-color($primary, $alpha: 0.5);
 $white-a50: #ffffff88;
 $white-a25: #ffffff44;
 
 // Overwrite some theme fonts settings.
-$font-family-sans-serif: "Open Sans", sans-serif;
+$font-family-sans-serif: "IBM Plex Sans", sans-serif;
 $font-family-monospace: "IBM Plex Mono", monospace;
 
 // 1rem == 16px
