--- a/frontend/src/components/core/Sidebar/Sidebar.scss
+++ b/frontend/src/components/core/Sidebar/Sidebar.scss
@@ -41,9 +41,8 @@
   }
 
   .sidebar-content {
-    background-color: $gray-200;
-    background-image: url("https://raw.githubusercontent.com/youozhan/design-ai/master/Frame04.png"),
-      linear-gradient(to bottom, #e68fb1, #bfcbfd);
+    background-color: #354155;
+    background-image: url("https://raw.githubusercontent.com/youozhan/design-ai/master/Frame05.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     box-sizing: border-box;
